app/assets/stylesheets/components/_navbar.scss
ul li {
  list-style-type: none;
}

.navbar-brand img {
  width: 150px;
}

.nav-font {
  font-family: $headers-font;
  font-size: 16px;
  font-weight: 600;
  margin-block-start: 0 !important;
  margin-block-end: 0 !important;
  transition: 0.2s;
}

.nav-font a:hover {
  transition: 0.2s;
  color: $primary-color;
  font-family: $headers-font;
}

.nav-font:hover {
  color: $primary-color;
  transition: 0.2s;
}

nav {
  height: 85px;
  width: 100%;
  font-size: 14px;
  font-weight: 500;
  padding: 10px 0;
  box-shadow: 0px 3px 4px $box-shadow;
  position: fixed;
  background-color: white;
}

.nav-content {
  height: 100%;
  max-width: 1400px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-logo {
  width: 45%;
}

.nav-elements {
  width: 55%;
  display: flex;
  justify-content: space-between;
}

.nav-links {
  width: 100%;
  padding-left: 15%;
  display: flex;
  justify-content: space-between;
  color: $primary-text;
  margin-block-end: 0;
  align-items: center;
}

.burger-menu {
  display: none;
}

.burger-menu {
  cursor: pointer;
}

.burger-menu div {
  width: 23px;
  height: 2px;
  background-color: $primary-text;
  margin: 5px;
  margin-right: 0px;
  transition: all 0.3s ease;
}

@media only screen and (max-width: 1480px) {
  .nav-content {
    max-width: 1350px;
  }
}

@media only screen and (max-width: 1400px) {
  .nav-content {
    max-width: 1250px;
  }

  .nav-links {
    padding-left: 0;
  }
}

@media only screen and (max-width: 1300px) {
  .nav-content {
    max-width: 1150px;
  }

  .nav-elements {
    width: 60%;
  }
}

@media only screen and (max-width: 1250px) {
  .nav-content {
    max-width: 1100px;
  }

  .nav-elements {
    width: 70%;
  }
}

@media only screen and (max-width: 1140px) {
  .nav-content {
    max-width: 1020px;
  }
}

@media only screen and (max-width: 1060px) {
  .nav-content {
    max-width: 980px;
  }

  .nav-elements {
    width: 75%;
  }
}

@media only screen and (max-width: 1030px) {
  .nav-content {
    max-width: 960px;
  }
}

@media only screen and (max-width: 1010px) {
  .nav-content {
    max-width: 920px;
  }
}

@media (max-width: 960px) {
  nav {
    padding: 10px 40px;
  }

  body {
    max-width: 100vw !important;
    overflow-x: hidden !important;
    margin: 0px;
  }

  html {
    overflow-x: hidden !important;
  }

  #wrapper {
    position: absolute;
    width: 100%;
    overflow-x: hidden !important;
    overflow-x: hidden !important;
  }

  .nav-links {
    position: absolute;
    right: 0px;
    min-height: calc(100vh - 85px);
    max-height: calc(100vh - 85px);
    overflow-y: hidden;
    top: 85px;
    align-items: top;
    margin-block-start: 0;
    padding: 80px 0;
    display: flex;
    flex-direction: column;
    background-color: rgba(70, 70, 70, 0.85);
    backdrop-filter: blur(10px);
    align-items: center;
    width: 100vw !important;
    transform: translateX(100%);
    // transition: transform 0.5s ease-in;
  }

  .nav-links li {
    opacity: 0;
    color: white;
  }

  .nav-elements {
    width: fit-content;
  }

  .burger-menu {
    display: block;
  }

  .nav-font {
    font-size: 18px;
  }
}

@media (max-width: 524px) {
  nav {
    padding: 20px;
  }
}

.nav-active {
  transform: translateX(0%);
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }

  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

.toggle .line1 {
  transform: rotate(-45deg) translate(-4px, 6px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  transform: rotate(45deg) translate(-4px, -6px);
}

